[gd_scene load_steps=3 format=2]

[ext_resource path="res://images/pupper001.tres" type="Texture" id=1]
[ext_resource path="res://Captcha Image.gd" type="Script" id=2]

[node name="Captcha Image" type="TextureButton"]
margin_right = 64.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 32, 32 )
focus_mode = 0
toggle_mode = true
texture_normal = ExtResource( 1 )
expand = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="." to="." method="_on_Captcha_Image_button_down"]
[connection signal="button_up" from="." to="." method="_on_Captcha_Image_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_Captcha_Image_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Captcha_Image_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Captcha_Image_pressed"]
